tests/snapshots/examples_fixtures/errors__unknown_keyword_fn_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/unknown_keyword_fn_error.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: missing CFG bytecode binding for IR call dest
== stdout ==
<not executed>
