tests/snapshots/examples_fixtures/errors__unknown_prefix_operator_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/unknown_prefix_operator_error.flx
== compile ==
failed (parse)
== diagnostics ==
error[E031]: Expected Expression

Expected expression, found an invalid token.

  examples/errors/unknown_prefix_operator_error.flx:3:1
  |
3 | ~1;
  | ^
== stdout ==
<not executed>
