tests/snapshots/examples_fixtures/errors__unterminated_string.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/unterminated_string.flx
== compile ==
failed (parse)
== diagnostics ==
Error[E071]: Unterminated String

String literal is missing closing quote.

  examples/errors/unterminated_string.flx:6:15
  |
6 | let message = "Hello World
  |               ^^^^^^^^^^^^

Hint:
  Add a closing " at the end of the string.
== stdout ==
<not executed>
